<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_horizontal"
    android:layout_centerHorizontal="true"
    android:foregroundGravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:theme="@style/AppTheme"
    android:background="#505050"
    >

        <TextView
            android:id="@+id/urlPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/backupPrompt"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />

        <EditText
            android:id="@+id/pointerUrl"
            android:layout_width="364dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="#A8A8A8"
            android:ems="10"
            android:inputType="textNoSuggestions"
            android:textAlignment="textEnd"
            android:textColor="@color/common_google_signin_btn_text_light_default" />

        <Button
            android:id="@+id/Import"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="10dp"
            android:background="#d3d3d3"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:text="@string/importButtonName" />

        <Button
            android:id="@+id/Cancel"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:background="#d3d3d3"
            android:layout_margin="10dp"
            android:text="@string/Cancel" />
</LinearLayout>